Refactor Entry and TransferType logic